--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.25.4",
     "antd-style": "^3.7.1",
     "axios": "^1.9.0",
+    "framer-motion": "^12.16.0",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
